[package]
name = "rust_blockchain"
version = "0.1.0"
authors = ["ayush <ayush@knoldus.com>"]
edition = "2018"

[lib]
name = "rustblockchainlib"
path = "src/lib.rs"

[[bin]]
name = "rust_blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3.4"
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7.3"